vDSP.h

    
    typedef unsigned long vDSP_Length;
typedef long long vDSP_Stride;
typedef long vDSP_Stride;
typedef struct vDSP_biquad_SetupStruct *vDSP_biquad_Setup;
typedef struct vDSP_biquad_SetupStructD *vDSP_biquad_SetupD;
typedef struct vDSP_biquadm_SetupStruct *vDSP_biquadm_Setup;
typedef struct vDSP_biquadm_SetupStructD *vDSP_biquadm_SetupD;
extern __nullable vDSP_biquad_Setup
vDSP_biquad_CreateSetup(const double *__Coefficients, vDSP_Length __M)
    API_AVAILABLE(macos(10.9), ios(6.0));
extern __nullable vDSP_biquad_SetupD
vDSP_biquad_CreateSetupD(const double *__Coefficients, vDSP_Length __M)
    API_AVAILABLE(macos(10.9), ios(6.0));
extern void vDSP_biquad_SetCoefficientsDouble(vDSP_biquad_Setup __setup,
                                              const double *__coeffs,
                                              vDSP_Length __start_sec,
                                              vDSP_Length __nsec)
    API_AVAILABLE(macos(12.0), ios(15.0));
extern void vDSP_biquad_SetCoefficientsSingle(vDSP_biquad_Setup __setup,
                                              const float *__coeffs,
                                              vDSP_Length __start_sec,
                                              vDSP_Length __nsec)
    API_AVAILABLE(macos(12.0), ios(15.0));
extern void vDSP_biquad_DestroySetup(__nullable vDSP_biquad_Setup __setup)
    API_AVAILABLE(macos(10.9), ios(6.0));
extern void vDSP_biquad_DestroySetupD(__nullable vDSP_biquad_SetupD __setup)
    API_AVAILABLE(macos(10.9), ios(6.0));
extern __nullable vDSP_biquadm_Setup vDSP_biquadm_CreateSetup(
    const double *__coeffs, vDSP_Length __M, vDSP_Length __N)
    API_AVAILABLE(macos(10.9), ios(7.0));
extern __nullable vDSP_biquadm_SetupD vDSP_biquadm_CreateSetupD(
    const double *__coeffs, vDSP_Length __M, vDSP_Length __N)
    API_AVAILABLE(macos(10.10), ios(8.0));
extern void vDSP_biquadm_DestroySetup(vDSP_biquadm_Setup __setup)
    API_AVAILABLE(macos(10.9), ios(7.0));
extern void vDSP_biquadm_DestroySetupD(vDSP_biquadm_SetupD __setup)
    API_AVAILABLE(macos(10.10), ios(8.0));
extern void vDSP_biquadm_CopyState(vDSP_biquadm_Setup __dest,
                                   const struct vDSP_biquadm_SetupStruct *__src)
    API_AVAILABLE(macos(10.9), ios(7.0));
extern void
vDSP_biquadm_CopyStateD(vDSP_biquadm_SetupD __dest,
                        const struct vDSP_biquadm_SetupStructD *__src)
    API_AVAILABLE(macos(10.10), ios(8.0));
extern void vDSP_biquadm_ResetState(vDSP_biquadm_Setup __setup)
    API_AVAILABLE(macos(10.9), ios(7.0));
extern void vDSP_biquadm_ResetStateD(vDSP_biquadm_SetupD __setup)
    API_AVAILABLE(macos(10.10), ios(8.0));
extern void vDSP_biquadm_SetCoefficientsDouble(
    vDSP_biquadm_Setup __setup, const double *__coeffs, vDSP_Length __start_sec,
    vDSP_Length __start_chn, vDSP_Length __nsec, vDSP_Length __nchn)
    API_AVAILABLE(macos(10.11), ios(9.0));
extern void vDSP_biquadm_SetCoefficientsDoubleD(
    vDSP_biquadm_SetupD __setup, const double *__coeffs,
    vDSP_Length __start_sec, vDSP_Length __start_chn, vDSP_Length __nsec,
    vDSP_Length __nchn) API_AVAILABLE(macos(13.0), ios(16.0));
extern void vDSP_biquadm_SetTargetsDouble(
    vDSP_biquadm_Setup __setup, const double *__targets, float __interp_rate,
    float __interp_threshold, vDSP_Length __start_sec, vDSP_Length __start_chn,
    vDSP_Length __nsec, vDSP_Length __nchn)
    API_AVAILABLE(macos(10.11), ios(9.0));
extern void vDSP_biquadm_SetTargetsDoubleD(
    vDSP_biquadm_SetupD __setup, const double *__targets, double __interp_rate,
    double __interp_threshold, vDSP_Length __start_sec, vDSP_Length __start_chn,
    vDSP_Length __nsec, vDSP_Length __nchn)
    API_AVAILABLE(macos(13.0), ios(16.0));
extern void vDSP_biquadm_SetCoefficientsSingle(
    vDSP_biquadm_Setup __setup, const float *__coeffs, vDSP_Length __start_sec,
    vDSP_Length __start_chn, vDSP_Length __nsec, vDSP_Length __nchn)
    API_AVAILABLE(macos(10.11), ios(9.0));
extern void vDSP_biquadm_SetCoefficientsSingleD(
    vDSP_biquadm_SetupD __setup, const float *__coeffs, vDSP_Length __start_sec,
    vDSP_Length __start_chn, vDSP_Length __nsec, vDSP_Length __nchn)
    API_AVAILABLE(macos(13.0), ios(16.0));
extern void vDSP_biquadm_SetTargetsSingle(
    vDSP_biquadm_Setup __setup, const float *__targets, float __interp_rate,
    float __interp_threshold, vDSP_Length __start_sec, vDSP_Length __start_chn,
    vDSP_Length __nsec, vDSP_Length __nchn)
    API_AVAILABLE(macos(10.11), ios(9.0));
extern void vDSP_biquadm_SetTargetsSingleD(
    vDSP_biquadm_SetupD __setup, const float *__targets, double __interp_rate,
    double __interp_threshold, vDSP_Length __start_sec, vDSP_Length __start_chn,
    vDSP_Length __nsec, vDSP_Length __nchn)
    API_AVAILABLE(macos(13.0), ios(16.0));
extern void vDSP_biquadm_SetActiveFilters(vDSP_biquadm_Setup __setup,
                                          const bool *__filter_states)
    API_AVAILABLE(macos(10.11), ios(9.0));
extern void vDSP_biquadm_SetActiveFiltersD(vDSP_biquadm_SetupD __setup,
                                           const bool *__filter_states)
    API_AVAILABLE(macos(13.0), ios(16.0));
extern void vDSP_biquad(const struct vDSP_biquad_SetupStruct *__Setup,
                        float *__Delay, const float *__X, vDSP_Stride __IX,
                        float *__Y, vDSP_Stride __IY, vDSP_Length __N)
    API_AVAILABLE(macos(10.9), ios(6.0));
extern void vDSP_biquadD(const struct vDSP_biquad_SetupStructD *__Setup,
                         double *__Delay, const double *__X, vDSP_Stride __IX,
                         double *__Y, vDSP_Stride __IY, vDSP_Length __N)
    API_AVAILABLE(macos(10.9), ios(6.0));
extern void vDSP_biquadm(vDSP_biquadm_Setup __Setup,
                         const float *__nonnull *__nonnull __X,
                         vDSP_Stride __IX, float *__nonnull *__nonnull __Y,
                         vDSP_Stride __IY, vDSP_Length __N)
    API_AVAILABLE(macos(10.9), ios(7.0));
extern void vDSP_biquadmD(vDSP_biquadm_SetupD __Setup,
                          const double *__nonnull *__nonnull __X,
                          vDSP_Stride __IX, double *__nonnull *__nonnull __Y,
                          vDSP_Stride __IY, vDSP_Length __N)
    API_AVAILABLE(macos(10.10), ios(8.0));
void vDSP_vrampmul(const float *__I, vDSP_Stride __IS, float *__Start,
                   const float *__Step, float *__O, vDSP_Stride __OS,
                   vDSP_Length __N) API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmulD(const double *__I, vDSP_Stride __IS, double *__Start,
                    const double *__Step, double *__O, vDSP_Stride __OS,
                    vDSP_Length __N) API_AVAILABLE(macos(10.10), ios(8.0));
void vDSP_vrampmuladd(const float *__I, vDSP_Stride __IS, float *__Start,
                      const float *__Step, float *__O, vDSP_Stride __OS,
                      vDSP_Length __N) API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmuladdD(const double *__I, vDSP_Stride __IS, double *__Start,
                       const double *__Step, double *__O, vDSP_Stride __OS,
                       vDSP_Length __N) API_AVAILABLE(macos(10.10), ios(8.0));
void vDSP_vrampmul2(const float *__I0, const float *__I1, vDSP_Stride __IS,
                    float *__Start, const float *__Step, float *__O0,
                    float *__O1, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmul2D(const double *__I0, const double *__I1, vDSP_Stride __IS,
                     double *__Start, const double *__Step, double *__O0,
                     double *__O1, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.10), ios(8.0));
void vDSP_vrampmuladd2(const float *__I0, const float *__I1, vDSP_Stride __IS,
                       float *__Start, const float *__Step, float *__O0,
                       float *__O1, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmuladd2D(const double *__I0, const double *__I1,
                        vDSP_Stride __IS, double *__Start, const double *__Step,
                        double *__O0, double *__O1, vDSP_Stride __OS,
                        vDSP_Length __N) API_AVAILABLE(macos(10.10), ios(8.0));
void vDSP_vrampmul_s1_15(const short int *__I, vDSP_Stride __IS,
                         short int *__Start, const short int *__Step,
                         short int *__O, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmuladd_s1_15(const short int *__I, vDSP_Stride __IS,
                            short int *__Start, const short int *__Step,
                            short int *__O, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmul2_s1_15(const short int *__I0, const short int *__I1,
                          vDSP_Stride __IS, short int *__Start,
                          const short int *__Step, short int *__O0,
                          short int *__O1, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmuladd2_s1_15(const short int *__I0, const short int *__I1,
                             vDSP_Stride __IS, short int *__Start,
                             const short int *__Step, short int *__O0,
                             short int *__O1, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmul_s8_24(const int *__I, vDSP_Stride __IS, int *__Start,
                         const int *__Step, int *__O, vDSP_Stride __OS,
                         vDSP_Length __N) API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmuladd_s8_24(const int *__I, vDSP_Stride __IS, int *__Start,
                            const int *__Step, int *__O, vDSP_Stride __OS,
                            vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmul2_s8_24(const int *__I0, const int *__I1, vDSP_Stride __IS,
                          int *__Start, const int *__Step, int *__O0, int *__O1,
                          vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_vrampmuladd2_s8_24(const int *__I0, const int *__I1, vDSP_Stride __IS,
                             int *__Start, const int *__Step, int *__O0,
                             int *__O1, vDSP_Stride __OS, vDSP_Length __N)
    API_AVAILABLE(macos(10.6), ios(4.0));