src/c.zig


// -- Single-channel setup/destroy --
pub extern fn vDSP_biquad_CreateSetup(Coefficients: [*]const f64, M: Length) ?BiquadSetup;
pub extern fn vDSP_biquad_CreateSetupD(Coefficients: [*]const f64, M: Length) ?BiquadSetupD;
pub extern fn vDSP_biquad_DestroySetup(setup: ?BiquadSetup) void;
pub extern fn vDSP_biquad_DestroySetupD(setup: ?BiquadSetupD) void;
// -- Single-channel coefficient update --
pub extern fn vDSP_biquad_SetCoefficientsDouble(setup: BiquadSetup, coeffs: [*]const f64, start_sec: Length, nsec: Length) void;
pub extern fn vDSP_biquad_SetCoefficientsSingle(setup: BiquadSetup, coeffs: [*]const f32, start_sec: Length, nsec: Length) void;
// -- Single-channel execute --
pub extern fn vDSP_biquad(Setup: BiquadSetup, Delay: [*]f32, X: [*]const f32, IX: Stride, Y: [*]f32, IY: Stride, N: Length) void;
pub extern fn vDSP_biquadD(Setup: BiquadSetupD, Delay: [*]f64, X: [*]const f64, IX: Stride, Y: [*]f64, IY: Stride, N: Length) void;
// -- Multi-channel setup/destroy --
pub extern fn vDSP_biquadm_CreateSetup(coeffs: [*]const f64, M: Length, N: Length) ?BiquadmSetup;
pub extern fn vDSP_biquadm_CreateSetupD(coeffs: [*]const f64, M: Length, N: Length) ?BiquadmSetupD;
pub extern fn vDSP_biquadm_DestroySetup(setup: BiquadmSetup) void;
pub extern fn vDSP_biquadm_DestroySetupD(setup: BiquadmSetupD) void;
// -- Multi-channel state --
pub extern fn vDSP_biquadm_CopyState(dest: BiquadmSetup, src: BiquadmSetup) void;
pub extern fn vDSP_biquadm_CopyStateD(dest: BiquadmSetupD, src: BiquadmSetupD) void;
pub extern fn vDSP_biquadm_ResetState(setup: BiquadmSetup) void;
pub extern fn vDSP_biquadm_ResetStateD(setup: BiquadmSetupD) void;
// -- Multi-channel coefficient update --
pub extern fn vDSP_biquadm_SetCoefficientsDouble(setup: BiquadmSetup, coeffs: [*]const f64, start_sec: Length, start_chn: Length, nsec: Length, nchn: Length) void;
pub extern fn vDSP_biquadm_SetCoefficientsDoubleD(setup: BiquadmSetupD, coeffs: [*]const f64, start_sec: Length, start_chn: Length, nsec: Length, nchn: Length) void;
pub extern fn vDSP_biquadm_SetCoefficientsSingle(setup: BiquadmSetup, coeffs: [*]const f32, start_sec: Length, start_chn: Length, nsec: Length, nchn: Length) void;
pub extern fn vDSP_biquadm_SetCoefficientsSingleD(setup: BiquadmSetupD, coeffs: [*]const f32, start_sec: Length, start_chn: Length, nsec: Length, nchn: Length) void;
// -- Multi-channel target (interpolated coefficient update) --
pub extern fn vDSP_biquadm_SetTargetsDouble(setup: BiquadmSetup, targets: [*]const f64, interp_rate: f32, interp_threshold: f32, start_sec: Length, start_chn: Length, nsec: Length, nchn: Length) void;
pub extern fn vDSP_biquadm_SetTargetsDoubleD(setup: BiquadmSetupD, targets: [*]const f64, interp_rate: f64, interp_threshold: f64, start_sec: Length, start_chn: Length, nsec: Length, nchn: Length) void;
pub extern fn vDSP_biquadm_SetTargetsSingle(setup: BiquadmSetup, targets: [*]const f32, interp_rate: f32, interp_threshold: f32, start_sec: Length, start_chn: Length, nsec: Length, nchn: Length) void;
pub extern fn vDSP_biquadm_SetTargetsSingleD(setup: BiquadmSetupD, targets: [*]const f32, interp_rate: f64, interp_threshold: f64, start_sec: Length, start_chn: Length, nsec: Length, nchn: Length) void;
// -- Multi-channel active filter control --
pub extern fn vDSP_biquadm_SetActiveFilters(setup: BiquadmSetup, filter_states: [*]const bool) void;
pub extern fn vDSP_biquadm_SetActiveFiltersD(setup: BiquadmSetupD, filter_states: [*]const bool) void;
// -- Multi-channel execute --
pub extern fn vDSP_biquadm(Setup: BiquadmSetup, X: [*]const [*]const f32, IX: Stride, Y: [*]const [*]f32, IY: Stride, N: Length) void;
pub extern fn vDSP_biquadmD(Setup: BiquadmSetupD, X: [*]const [*]const f64, IX: Stride, Y: [*]const [*]f64, IY: Stride, N: Length) void;

// ============================================================================
// ramp
// ============================================================================

pub extern fn vDSP_vrampmul(I: [*]const f32, IS: Stride, Start: *f32, Step: *const f32, O: [*]f32, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmulD(I: [*]const f64, IS: Stride, Start: *f64, Step: *const f64, O: [*]f64, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmuladd(I: [*]const f32, IS: Stride, Start: *f32, Step: *const f32, O: [*]f32, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmuladdD(I: [*]const f64, IS: Stride, Start: *f64, Step: *const f64, O: [*]f64, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmul2(I0: [*]const f32, I1: [*]const f32, IS: Stride, Start: *f32, Step: *const f32, O0: [*]f32, O1: [*]f32, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmul2D(I0: [*]const f64, I1: [*]const f64, IS: Stride, Start: *f64, Step: *const f64, O0: [*]f64, O1: [*]f64, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmuladd2(I0: [*]const f32, I1: [*]const f32, IS: Stride, Start: *f32, Step: *const f32, O0: [*]f32, O1: [*]f32, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmuladd2D(I0: [*]const f64, I1: [*]const f64, IS: Stride, Start: *f64, Step: *const f64, O0: [*]f64, O1: [*]f64, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmul_s1_15(I: [*]const i16, IS: Stride, Start: *i16, Step: *const i16, O: [*]i16, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmuladd_s1_15(I: [*]const i16, IS: Stride, Start: *i16, Step: *const i16, O: [*]i16, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmul2_s1_15(I0: [*]const i16, I1: [*]const i16, IS: Stride, Start: *i16, Step: *const i16, O0: [*]i16, O1: [*]i16, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmuladd2_s1_15(I0: [*]const i16, I1: [*]const i16, IS: Stride, Start: *i16, Step: *const i16, O0: [*]i16, O1: [*]i16, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmul_s8_24(I: [*]const i32, IS: Stride, Start: *i32, Step: *const i32, O: [*]i32, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmuladd_s8_24(I: [*]const i32, IS: Stride, Start: *i32, Step: *const i32, O: [*]i32, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmul2_s8_24(I0: [*]const i32, I1: [*]const i32, IS: Stride, Start: *i32, Step: *const i32, O0: [*]i32, O1: [*]i32, OS: Stride, N: Length) void;
pub extern fn vDSP_vrampmuladd2_s8_24(I0: [*]const i32, I1: [*]const i32, IS: Stride, Start: *i32, Step: *const i32, O0: [*]i32, O1: [*]i32, OS: Stride, N: Length) void;
